cloud/w8/day-b/network-policy-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow-db-only
  namespace: default
spec:
  # Áp dụng chính sách này cho các Pod có nhãn app: my-web-app
  podSelector:
    matchLabels:
      app: my-web-app
      tier: backend
      
  policyTypes:
    - Ingress
    - Egress
    
  # Cấu hình Ingress: Chỉ cho phép traffic từ Pod ở frontend đi vào backend qua port 8080
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: my-web-app
              tier: frontend
      ports:
        - protocol: TCP
          port: 8080
          
  # Cấu hình Egress: Chỉ cho phép backend gửi traffic đi tới Pod database qua port 3306
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: my-web-app
              tier: database
      ports:
        - protocol: TCP
          port: 3306
